--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -29,13 +29,16 @@
             </li>
           </ul>
         </aside>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <article class="col-12 col-md-9">
-          <p>
-           {{post.text}}
-          </p>
+  <article class="col-12 col-md-9">
+    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+      <img class="" src="{{ im.url }}">
+    {% endthumbnail %}
+    <p>{{ post.text }}</p>
+    {% if user.is_authenticated %}
+    <a class="btn btn-primary" href="{% url 'posts:edit' post.pk %}">
+        редактировать запись
+    </a>
+    {% endif %}
           {% if user.is_authenticated %}
   <div class="card my-4">
     <h5 class="card-header">Добавить комментарий:</h5>
