--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -29,22 +29,24 @@
             </li>
           </ul>
         </aside>
-  <article class="col-12 col-md-9">
-    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-      <img class="" src="{{ im.url }}">
-    {% endthumbnail %}
-    <p>{{ post.text }}</p>
-    {% if user.is_authenticated %}
-    <a class="btn btn-primary" href="{% url 'posts:edit' post.pk %}">
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+        {% endthumbnail %}
+        <article class="col-12 col-md-9">
+          <p>
+           {{post.text}}
+          </p>
+        {% if user.is_authenticated %}
+    <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
         редактировать запись
     </a>
-    {% endif %}
+        {% endif %}
           {% if user.is_authenticated %}
   <div class="card my-4">
     <h5 class="card-header">Добавить комментарий:</h5>
     <div class="card-body">
       <form method="post" action="{% url 'posts:add_comment' post.id %}">
-        {% csrf_token %}      
+        {% csrf_token %}
         <div class="form-group mb-2">
           {{ form.text|addclass:"form-control" }}
         </div>
